// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unit tests for TestStepsView component: should render the component when tests failed and match snapshot 1`] = `
<div>
  <div
    class="test-steps-container"
  >
    <p
      class="test-steps-scenario-label"
      data-testid="test-steps-scenario-label"
    >
      Scenario:
    </p>
    <p
      class="test-steps-scenario-title"
      data-testid="test-steps-scenario-title"
    >
      The user is not able to create a record in the database which not exist
    </p>
    <div
      class="test-steps-result"
    >
      <div
        class="test-steps-icon"
      >
        <svg
          class="test-steps-failed-icon"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22ZM12 20C16.4183 20 20 16.4183 20 12C20 7.58172 16.4183 4 12 4C7.58172 4 4 7.58172 4 12C4 16.4183 7.58172 20 12 20ZM12 10.5858L14.8284 7.75736L16.2426 9.17157L13.4142 12L16.2426 14.8284L14.8284 16.2426L12 13.4142L9.17157 16.2426L7.75736 14.8284L10.5858 12L7.75736 9.17157L9.17157 7.75736L12 10.5858Z"
          />
        </svg>
      </div>
      <div
        class="test-steps-description"
      >
        <p>
          Given The user wants to create a new record "Anna Stock" in the Digital Registries database
        </p>
      </div>
    </div>
    <div
      class="test-steps-result"
    >
      <div
        class="test-steps-icon"
      >
        <svg
          class="test-steps-failed-icon"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22ZM12 20C16.4183 20 20 16.4183 20 12C20 7.58172 16.4183 4 12 4C7.58172 4 4 7.58172 4 12C4 16.4183 7.58172 20 12 20ZM12 10.5858L14.8284 7.75736L16.2426 9.17157L13.4142 12L16.2426 14.8284L14.8284 16.2426L12 13.4142L9.17157 16.2426L7.75736 14.8284L10.5858 12L7.75736 9.17157L9.17157 7.75736L12 10.5858Z"
          />
        </svg>
      </div>
      <div
        class="test-steps-description"
      >
        <p>
          When The user triggers an action to create a new record "Anna Stock" in the database
        </p>
      </div>
    </div>
    <div
      class="test-steps-result"
    >
      <div
        class="test-steps-icon"
      >
        <svg
          class="test-steps-failed-icon"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22ZM12 20C16.4183 20 20 16.4183 20 12C20 7.58172 16.4183 4 12 4C7.58172 4 4 7.58172 4 12C4 16.4183 7.58172 20 12 20ZM12 10.5858L14.8284 7.75736L16.2426 9.17157L13.4142 12L16.2426 14.8284L14.8284 16.2426L12 13.4142L9.17157 16.2426L7.75736 14.8284L10.5858 12L7.75736 9.17157L9.17157 7.75736L12 10.5858Z"
          />
        </svg>
      </div>
      <div
        class="test-steps-description"
      >
        <p>
          Then Operation results in an error for create "Anna Stock"
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Unit tests for TestStepsView component: should render the component when tests passed and match snapshot 1`] = `
<div>
  <div
    class="test-steps-container"
  >
    <p
      class="test-steps-scenario-label"
      data-testid="test-steps-scenario-label"
    >
      Scenario:
    </p>
    <p
      class="test-steps-scenario-title"
      data-testid="test-steps-scenario-title"
    >
      The user successfully creates record "John Smith" in the Digital Registries database.
    </p>
    <div
      class="test-steps-result"
    >
      <div
        class="test-steps-icon"
      >
        <svg
          class="test-steps-passed-icon"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22ZM12 20C16.4183 20 20 16.4183 20 12C20 7.58172 16.4183 4 12 4C7.58172 4 4 7.58172 4 12C4 16.4183 7.58172 20 12 20ZM11.0026 16L6.75999 11.7574L8.17421 10.3431L11.0026 13.1716L16.6595 7.51472L18.0737 8.92893L11.0026 16Z"
          />
        </svg>
      </div>
      <div
        class="test-steps-description"
      >
        <p>
          Given The user wants to create a new record "John Smith" in the Digital Registries database
        </p>
      </div>
    </div>
    <div
      class="test-steps-result"
    >
      <div
        class="test-steps-icon"
      >
        <svg
          class="test-steps-passed-icon"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22ZM12 20C16.4183 20 20 16.4183 20 12C20 7.58172 16.4183 4 12 4C7.58172 4 4 7.58172 4 12C4 16.4183 7.58172 20 12 20ZM11.0026 16L6.75999 11.7574L8.17421 10.3431L11.0026 13.1716L16.6595 7.51472L18.0737 8.92893L11.0026 16Z"
          />
        </svg>
      </div>
      <div
        class="test-steps-description"
      >
        <p>
          When The user triggers an action to create a new record "John Smith" in the database
        </p>
      </div>
    </div>
    <div
      class="test-steps-result"
    >
      <div
        class="test-steps-icon"
      >
        <svg
          class="test-steps-passed-icon"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22ZM12 20C16.4183 20 20 16.4183 20 12C20 7.58172 16.4183 4 12 4C7.58172 4 4 7.58172 4 12C4 16.4183 7.58172 20 12 20ZM11.0026 16L6.75999 11.7574L8.17421 10.3431L11.0026 13.1716L16.6595 7.51472L18.0737 8.92893L11.0026 16Z"
          />
        </svg>
      </div>
      <div
        class="test-steps-description"
      >
        <p>
          Then Operation finishes successfully for create user "John Smith"
        </p>
      </div>
    </div>
  </div>
</div>
`;
